<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AF">ANDROID</string>
    <string name="MP3_DIRPATH">apputils</string>
    <string name="MP3_NAME">appmp3</string>
    <string name="dumpcatcher_url">http://api.wap.58.com/api/info/errorlog</string>
    <string name="dumpcatcher_product_id">1</string>
    <string name="channelID">2</string>
    <string name="loading">载入中...</string>
    <string name="app_name">三国演义</string>
    <string name="ad_key">2434D975BC8359AFE73A0B56C0F04F904092AE835BCE4D4CABF6FA7D872B6C3E450CF6FA1A74E4AC</string>
    <string name="net_unavailable">网络不可用,请检查网络!</string>
    <string name="demo_text">&lt;font>道可道，非常道。名可名，非常名。无名，天地之始；有名万物之母；故恒无欲，以观其妙； 恒有欲，以观其徼。此两者，同出而异名，同谓之玄。玄之又玄，众妙之门。&lt;/font> &lt;br/> &lt;font>天下皆知美之为美，斯恶已;皆知善之为善，斯不善已。故有无相生，难易相成，长短相形， 高下相倾，音声相和，前后相随。是以圣人处无为之事，行不言之教，万物作焉而不辞，生而不有， 为而不恃，功成而弗居。夫唯不居，是以不去。&lt;/font> &lt;br/> &lt;font>上善若水。水善利万物而不争，处众人之所恶，故几于道。居善地， 心善渊，与善仁，言善信，政善治，事善能，动善时。夫唯不争，故无尤。&lt;/font></string>
    <string name="version_tip">内容版权声明: &lt;br/> 本应用所含书籍内容来源网上免费版本,内容版权归小说作者所有. &lt;br/> 试读版内容与最终书籍内容可能会有些微差异;如果您喜欢此书,请购买印刷版书籍.</string>
    <string name="setting_title">设置</string>
    <string name="setting_read_text">阅读设置</string>
    <string name="setting_char_size_text">字体大小:</string>
    <string name="setting_color_comp_text">颜色组合:</string>
    <string name="setting_textstyle_dft_text">默认</string>
    <string name="setting_textstyle_th_text">土黑</string>
    <string name="setting_textstyle_bz_text">白粽</string>
    <string name="setting_textstyle_hh_text">黑灰</string>
    <string name="setting_textstyle_bh_text">白黑</string>
    <string name="setting_tran_compl_text">简繁体切换:</string>
    <string name="setting_brightness_text">亮度(非自调节状态):</string>
    <string name="setting_status_bar_text">隐藏状态栏(重新打开生效):</string>
    <string name="setting_full_screen_text">全屏阅读:</string>
    <string name="setting_lock_screen_text">不自动锁屏:</string>
    <string name="setting_reset_text">恢复默认设置</string>
    <string name="setting_reset_confirm_text">恢复默认设置</string>
    <string name="setting_full_screen_tip">全屏阅读可以左右滑动手指翻页</string>
    <string name="book_end_text">全书结束,感谢阅读:)</string>
    <string name="page_text">第${page}页</string>
    <string name="article_back_text">书目</string>
    <string name="article_save_bookmark_text">加书签</string>
    <string name="article_save_bookmark_success">书签保存成功</string>
    <string name="article_save_bookmark_fail">书签保存失败</string>
    <string name="article_is_last_cate">已经是最后一章啦;)</string>
    <string name="exit_text">退出</string>
    <string name="back_text">返回</string>
    <string name="confirm_text">确 定</string>
    <string name="cancel_text">取 消</string>
    <string name="bookmark_title_text">书签列表</string>
    <string name="bookmark_list_empty_text">您还没有添加书签.</string>
    <string name="history_title">阅读历史</string>
    <string name="history_empty_text">您还没有阅读历史</string>
    <string name="history_delete_confirm">确认删除本历史记录吗?</string>
    <string name="history_delete_success">删除历史记录成功</string>
    <string name="tab_cate_text">书目</string>
    <string name="tab_bookmark_text">书签</string>
    <string name="tab_history_text">历史</string>
    <string name="tab_setting_text">设置</string>
    <string name="tab_more_text">更多</string>
    <string name="quit_confirm_text">您确定要退出吗?</string>
    <string name="quit_add_shortcut">添加快捷方式到桌面</string>
    <string name="more_books_title">更多精彩书籍</string>
    <string name="more_books_empty_text">掌柜正在准备,敬请期待!</string>
    <string name="more_title_text">更多</string>
    <string name="more_version_text">版本:</string>
    <string name="more_copyrights_text">版权所有 @2011 收割机</string>
    <string name="more_qq_text">QQ:345112133</string>
    <string name="more_wonderful_books_text">更多精彩书籍</string>
    <string name="mail_us_text">撰写邮件给我们</string>
    <string name="mail_subject_text">意见与建议</string>
    <string name="mail_chooser_text">用哪个程序发邮件?</string>
    <string name="mail_exception_text">抱歉,您的设备不支持发邮件</string>
    <string name="bookmark_delete_confirm">确认删除本书签吗?</string>
    <string name="bookmark_delete_success">删除标签成功</string>
    <string name="more_being_load">即将下载,请稍候...</string>
</resources>
