<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/main_view_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ViewSwitcher android:id="@id/main_card_view_switcher" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <LinearLayout android:gravity="fill_horizontal|bottom|center" android:id="@id/main_card_tab_view" android:background="@drawable/tabmenu_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="44.0dip" android:layout_alignParentBottom="true">
        <TextView android:id="@id/tab_btn_category" android:text="@string/tab_cate_text" android:drawableTop="@drawable/tabicon_category" style="@style/TabIcon" />
        <TextView android:id="@id/tab_btn_bookmark" android:text="@string/tab_bookmark_text" android:drawableTop="@drawable/tabicon_bookmark" android:layout_toRightOf="@id/tab_btn_category" style="@style/TabIcon" />
        <TextView android:id="@id/tab_btn_history" android:text="@string/tab_history_text" android:drawableTop="@drawable/tabicon_history" android:layout_toRightOf="@id/tab_btn_bookmark" style="@style/TabIcon" />
        <TextView android:id="@id/tab_btn_setting" android:text="@string/tab_setting_text" android:drawableTop="@drawable/tabicon_setting" android:layout_toRightOf="@id/tab_btn_bookmark" style="@style/TabIcon" />
        <TextView android:id="@id/tab_btn_more" android:text="@string/tab_more_text" android:drawableTop="@drawable/tabicon_more" android:layout_toRightOf="@id/tab_btn_setting" style="@style/TabIcon" />
    </LinearLayout>
</RelativeLayout>