<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/navigation_layout" style="@style/TitleLayout">
        <TextView android:id="@id/navigation_title" android:text="@string/setting_title" style="@style/Title" />
    </RelativeLayout>
    <com.harvesters.ebooksang.views.SettingScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="45.0dip" android:layout_below="@id/navigation_layout">
        <RelativeLayout android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/article_btm_navigation" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true" style="@style/Card">
                <TextView android:textSize="20.0dip" android:textStyle="bold" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setting_read_text" />
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@id/setting_demo_text_scroll" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="150.0dip">
                        <RelativeLayout android:id="@id/setting_demo_text_layout" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                            <TextView android:id="@id/setting_demo_text" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                        </RelativeLayout>
                    </ScrollView>
                    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="15.0dip" android:layout_marginBottom="8.0dip" />
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
                        <TextView android:textSize="14.0dip" android:textStyle="bold" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/setting_char_size_text" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                        <ZoomControls android:id="@id/text_size_zoom" android:layout_width="155.0dip" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip">
                        <TextView android:textSize="14.0dip" android:textStyle="bold" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/setting_color_comp_text" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                        <RadioGroup android:orientation="horizontal" android:id="@id/text_style_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
                            <RadioButton android:id="@id/text_style_dft" android:background="@drawable/setting_left" android:text="@string/setting_textstyle_dft_text" style="@style/SettingRadioItem" />
                            <RadioButton android:id="@id/text_style_th" android:background="@drawable/setting_middle" android:text="@string/setting_textstyle_th_text" style="@style/SettingRadioItem" />
                            <RadioButton android:id="@id/text_style_bz" android:background="@drawable/setting_middle" android:text="@string/setting_textstyle_bz_text" style="@style/SettingRadioItem" />
                            <RadioButton android:id="@id/text_style_hh" android:background="@drawable/setting_middle" android:text="@string/setting_textstyle_hh_text" style="@style/SettingRadioItem" />
                            <RadioButton android:id="@id/text_style_bh" android:background="@drawable/setting_right" android:text="@string/setting_textstyle_bh_text" style="@style/SettingRadioItem" />
                        </RadioGroup>
                    </RelativeLayout>
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="14.0dip" android:textStyle="bold" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/setting_tran_compl_text" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                        <ToggleButton android:id="@id/convert_tran_btn" android:background="@drawable/simp_tran_button" android:layout_width="75.0dip" android:layout_height="25.0dip" android:textOn="" android:textOff="" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" />
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="14.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_brightness_text" android:layout_centerVertical="true" />
                        <SeekBar android:id="@id/brightness_seek" android:layout_width="150.0dip" android:layout_height="wrap_content" android:max="100" android:progress="70" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" />
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip">
                        <TextView android:textSize="14.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_status_bar_text" android:layout_centerVertical="true" />
                        <ToggleButton android:id="@id/hide_status_bar_btn" android:background="@drawable/toggle_button" android:layout_width="75.0dip" android:layout_height="25.0dip" android:textOn="" android:textOff="" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="14.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_full_screen_text" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                        <ToggleButton android:id="@id/full_screen_btn" android:background="@drawable/toggle_button" android:layout_width="75.0dip" android:layout_height="25.0dip" android:textOn="" android:textOff="" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    </RelativeLayout>
                    <RelativeLayout android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="14.0dip" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_lock_screen_text" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                        <ToggleButton android:id="@id/auto_lock_screen_btn" android:background="@drawable/toggle_button" android:layout_width="75.0dip" android:layout_height="25.0dip" android:textOn="" android:textOff="" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    </RelativeLayout>
                </LinearLayout>
                <Button android:textSize="16.0dip" android:textStyle="bold" android:textColor="@color/cate_text_selector" android:gravity="center" android:id="@id/reset_setting" android:background="@drawable/button_background" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginTop="20.0dip" android:text="@string/setting_reset_text" />
            </LinearLayout>
        </RelativeLayout>
    </com.harvesters.ebooksang.views.SettingScrollView>
</RelativeLayout>