<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/navigation_layout" style="@style/TitleLayout">
        <TextView android:id="@id/navigation_title" android:text="@string/more_books_title" style="@style/Title" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_toLeftOf="@id/navigation_title" android:layout_alignParentLeft="true">
            <Button android:id="@id/navigation_back_button" android:layout_width="54.0dip" android:text="@string/back_text" style="@style/TitleLeftBackButton" />
        </RelativeLayout>
    </RelativeLayout>
    <ListView android:id="@id/more_book_list" android:paddingTop="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="25.0dip" android:layout_below="@id/navigation_layout" style="@style/List" />
    <TextView android:textSize="16.0dip" android:id="@id/empty_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more_books_empty_text" android:layout_centerInParent="true" />
</RelativeLayout>