<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="250.0dip" android:layout_height="wrap_content">
        <TextView android:textSize="24.0sp" android:textColor="@color/white" android:id="@id/confirm_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/quit_confirm_text" />
        <RelativeLayout android:id="@id/confirm_cancel_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/confirm_text" android:layout_centerHorizontal="true">
            <Button android:textSize="16.0sp" android:textColor="@color/cate_text_selector" android:id="@id/exit_confirm" android:background="@drawable/cancel_button" android:layout_width="110.0dip" android:layout_height="40.0dip" android:layout_marginRight="25.0dip" android:text="@string/confirm_text" />
            <Button android:textSize="16.0sp" android:textColor="@color/cate_text_selector" android:id="@id/exit_cancel" android:background="@drawable/cancel_button" android:layout_width="110.0dip" android:layout_height="40.0dip" android:text="@string/cancel_text" android:layout_toRightOf="@id/exit_confirm" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/add_shortcuts_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/confirm_cancel_layout">
            <CheckBox android:id="@id/add_shortcuts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" />
            <TextView android:textSize="14.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/quit_add_shortcut" android:layout_toRightOf="@id/add_shortcuts" android:layout_centerVertical="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>