<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/navigation_layout" style="@style/TitleLayout">
        <TextView android:id="@id/navigation_title" android:text="@string/more_title_text" style="@style/Title" />
    </RelativeLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_below="@id/navigation_layout" style="@style/Card">
        <RelativeLayout android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
            <ImageView android:id="@id/icon_image" android:layout_width="55.0dip" android:layout_height="55.0dip" android:layout_marginRight="12.0dip" android:src="@drawable/harve_icon" android:layout_alignParentLeft="true" />
            <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/icon_image" android:layout_alignTop="@id/icon_image">
                <TextView android:id="@id/version_code" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more_copyrights_text" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more_qq_text" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:id="@id/more_books_layout" android:background="@drawable/button_background" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="15.0dip">
            <TextView android:textSize="16.0dip" android:textColor="@color/cate_text_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/more_wonderful_books_text" android:layout_centerInParent="true" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:src="@drawable/cate_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/mail_us_layout" android:background="@drawable/button_background" android:layout_width="fill_parent" android:layout_height="45.0dip" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="15.0dip">
            <TextView android:textSize="16.0dip" android:textColor="@color/cate_text_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mail_us_text" android:layout_centerInParent="true" />
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:src="@drawable/cate_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/mail_us_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" style="@style/Card">
            <TextView android:id="@id/version_tip_text" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version_tip" android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>